tests/misc_tests/overflow_failures_ui/overflowing-exprs-err.rs
fn overflowing_lit() {
    typewit_gce::gce_int_eq!(
        340_282_366_920_938_463_463_374_607_431_768_211_456u128, 
        340_282_366_920_938_463_463_374_607_431_768_211_455u128,
    );
}

fn overflowing_add() {
    typewit_gce::gce_int_eq!(
        340_282_366_920_938_463_463_374_607_431_768_211_455u128 + 1, 
        340_282_366_920_938_463_463_374_607_431_768_211_455u128,
    );
    typewit_gce::gce_int_eq!(
        340_282_366_920_938_463_463_374_607_431_768_211_454u128 + (10 % 4), 
        340_282_366_920_938_463_463_374_607_431_768_211_454u128,
    );
}

fn overflowing_sub() {
    typewit_gce::gce_int_eq!(
        -340_282_366_920_938_463_463_374_607_431_768_211_455i128 * 2 - 2, 
        340_282_366_920_938_463_463_374_607_431_768_211_455i128 * 2,
    );
}

fn overflowing_mul() {
    typewit_gce::gce_int_eq!(
        340_282_366_920_938_463_463_374_607_431_768_211_455u128 * 2, 
        340_282_366_920_938_463_463_374_607_431_768_211_455u128,
    );
}

fn overflowing_mul_zero_before_other_multiplied_exprs() {
    const X: u128 = 0;

    typewit_gce::gce_int_eq!(
        0 * X * 340_282_366_920_938_463_463_374_607_431_768_211_455u128 * 2, 
        100u128,
    );
}

fn main(){}


